--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,227 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #e6e3e3 !important;
+  font-weight: 400;
+  font-family: "Inter", sans-serif !important;
+  z-index: 1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.h100 {
+  min-height: 100vh;
+}
+
+.card-title {
+  font-size: 31.94px;
+  line-height: 38.66px;
+}
+.card-body {
+  border-radius: 17.75px;
+  background-color: white;
+  border: 0;
+  padding: 5rem !important;
+}
+
+.label-text {
+  font-size: 17.75px;
+  line-height: 21.48px;
+}
+.custom-input {
+  border: 2px solid #f8b959 !important;
+  border-radius: 20px !important;
+}
+
+.ant-select-selector {
+  border: 2px solid #f8b959 !important;
+  border-radius: 20px !important;
+}
+
+.ant-select-selection-item {
+  background-color: #d9d9d9 !important;
+  border-radius: 20px !important;
+}
+
+.custom-btn {
+  background-color: #f8b959 !important;
+  border: 2px solid #f8b959 !important;
+  color: black !important;
+  border-radius: 20px !important;
+  width: 100%;
+}
+
+.custom-btn-cancel {
+  background-color: #fdeacd !important;
+  border: 2px solid #fdeacd !important;
+  border-radius: 20px !important;
+  color: black !important;
+  width: 100%;
+}
+.create-account {
+  font-size: 26.62px;
+  line-height: 32.22px;
+  color: #f8b959;
+}
+
+.logout-text {
+  color: #f95a50;
+  cursor: pointer;
+  font-size: 18px;
+}
+.pwg-image {
+  width: 60px;
+}
+.post-card {
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  background-color: white;
+}
+
+.post-date {
+  font-size: 12px;
+  color: #f8b959;
+}
+
+.post-title {
+  font-size: 22px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.post-tag {
+  border-radius: 10px;
+  padding: 5px 9px 5px 9px;
+  background-color: #f8b9594d;
+  font-size: 12px;
+}
+
+.post-body {
+  font-size: 16px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.home-title {
+  font-size: 32px;
+}
+
+.tag-container {
+  gap: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-container {
+  gap: 15px;
+}
+
+.button-container button {
+  width: 100%;
+}
+
+.button-edit {
+  border-radius: 20px;
+  padding: 4px 10px 4px 10px;
+  border: 0;
+  background-color: #d9f7cf;
+}
+
+.button-view {
+  border: 0;
+  border-radius: 20px;
+  padding: 4px 10px 4px 10px;
+  background-color: #f8b959;
+}
+
+.button-delete {
+  border-radius: 20px;
+  border: 0;
+  padding: 4px 10px 4px 10px;
+  background-color: #f95a50;
+}
+
+.add-new-post-button {
+  border-radius: 20px;
+  border: 1px solid #f8b959;
+  background-color: #f8b959;
+  padding: 8px 20px 8px 20px;
+}
+
+.view-container {
+  background-color: #ffffff;
+  border-radius: 32.16px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+.view-title {
+  font-weight: 600;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.view-body {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.total-title {
+  font-size: 26px;
+}
+
+.total-number {
+  font-size: 35px;
+}
+
+.total-account-container {
+  background-color: #fdeacd;
+}
+
+.total-post-container {
+  background-color: #e6a5a1;
+}
+
+.my-post-container {
+  background-color: #bddbb3;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.pagination-button {
+  border-radius: 5px;
+  border: 0;
+  padding: 5px 9px 5px 9px;
+  background-color: white;
+}
+
+.popup-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+}
+.popup-container.active {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000040 !important;
+  z-index: 999;
+}
+
+@media (max-width: 576px) {
+  .card-body {
+    padding: 2rem !important;
+  }
 }
